--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "@testing-library/user-event": "^12.8.3",
     "cuid": "^2.1.8",
     "date-fns": "^2.19.0",
+    "firebase": "^8.3.1",
     "formik": "^2.2.6",
-    "react": "^17.0.1",
+    "react": "^17.0.2",
     "react-calendar": "^3.3.1",
     "react-datepicker": "^3.6.0",
-    "react-dom": "^17.0.1",
+    "react-dom": "^17.0.2",
     "react-redux": "^7.2.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
