--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
+    "connected-react-router": "^6.9.1",
     "cuid": "^2.1.8",
     "date-fns": "^2.19.0",
     "firebase": "^8.3.1",
     "formik": "^2.2.6",
+    "history": "^4.10.1",
     "react": "^17.0.2",
     "react-calendar": "^3.3.1",
     "react-datepicker": "^3.6.0",
